config.json: updated has_nav in header

--- a/_data/config.json
+++ b/_data/config.json
@@ -2,7 +2,7 @@
     "title": "Stackbit Starter Theme",
     "header": {
         "title": "Feztsu",
-        "has_nav": true,
+        "has_nav": false,
         "nav_links": [
             {
                 "label": "Features",
