config.json: updated url in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -49,7 +49,7 @@
         "social_links": [
             {
                 "label": "Twitter",
-                "url": "https://twitter.com/",
+                "url": "https://twitter.com/fezjqn",
                 "style": "link",
                 "new_window": true
             },
