--- a/_data/config.json
+++ b/_data/config.json
@@ -15,7 +15,7 @@
                 "style": "link"
             },
             {
-                "label": "About",
+                "label": "About Me",
                 "url": "/about",
                 "style": "link"
             },
