config.json: updated nav_links in header

--- a/_data/config.json
+++ b/_data/config.json
@@ -28,6 +28,13 @@
                 "label": "Contact Us",
                 "url": "/contact",
                 "style": "primary"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "new_window": false,
+                "no_follow": false
             }
         ]
     },
