config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -25,7 +25,7 @@
                 "style": "link"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Art",
                 "url": "#",
                 "style": "link",
                 "new_window": false,
