--- a/_data/config.json
+++ b/_data/config.json
@@ -11,7 +11,7 @@
             },
             {
                 "label": "Blog",
-                "url": "/blog",
+                "url": "/",
                 "style": "link"
             },
             {
