--- a/_data/config.json
+++ b/_data/config.json
@@ -26,7 +26,7 @@
             },
             {
                 "label": "Art",
-                "url": "#",
+                "url": "/art",
                 "style": "link",
                 "new_window": false,
                 "no_follow": false
