--- a/_data/config.json
+++ b/_data/config.json
@@ -75,5 +75,6 @@
         ],
         "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=starter&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
     },
-    "domain": "https://fez-tsu-c0184.netlify.app"
+    "domain": "https://fez-tsu-c0184.netlify.app",
+    "favicon": "images/Fez kodomo.jpg"
 }
