config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -11,7 +11,7 @@
             },
             {
                 "label": "Blog",
-                "url": "/arrrrrrrt",
+                "url": "/art",
                 "style": "link"
             },
             {
