config.json: updated url in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -69,7 +69,7 @@
             },
             {
                 "label": "GitHub",
-                "url": "https://github.com/",
+                "url": "https://github.com/fezjqn",
                 "style": "link",
                 "new_window": true
             },
