config.json: updated url in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -75,7 +75,7 @@
             },
             {
                 "label": "LinkedIn",
-                "url": "https://www.linkedin.com/fernando",
+                "url": "https://www.linkedin.com/fernando-joaquin-73a38721a",
                 "style": "link",
                 "new_window": true
             }
